# daily-todos-server

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docs/: sync-design.md  systemd.md
migrations/: env.py
migrations/versions/: 0001_initial.py
src/dailytodo_server/: __init__.py  api.py  db.py  main.py  models.py  rate_limit.py  schemas.py  security.py  services.py  settings.py
src/dailytodo_server/cli/: __init__.py  users.py
tests/: test_api.py
