[project]
name = "daily-todos-server"
version = "0.1.0"
description = "HTTP sync backend for DailyTodo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.5",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
dailytodo-user = "dailytodo_server.cli.users:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dailytodo_server"]
